Remplacer "centrale" par "chambre"

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
             <img src="https://elveotie.github.io/images/gouvernement/cee.png" alt="Logo de la CEE" />
           </p>
           <h1 class="HeaderBrandText">
-            Centrale des Entreprises d'Elvéotie <br>
+            Chambre des Entreprises d'Elvéotie <br>
             <span>Dynamiser le Royaume</span>
           </h1>
         </div>
@@ -37,7 +37,7 @@
       </div>
 
       <footer class="Footer">
-        <p>&copy; Centrale des Entreprises Elvéotiques, 2019</p>
+        <p>&copy; Chambre des Entreprises Elvéotiques, 2019</p>
         {% include footer-links.html %}
       </footer>
     </div>
