--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
       <header class="Header">
         <div class="HeaderBrand">
           <p class="HeaderBrandLogo">
-            <img src="https://elveotie.github.io/images/gouvernement/cee.png" alt="Logo de la CEE" />
+            <img src="https://elveotie.github.io/images/gouvernement/cee.svg" alt="Logo de la CEE" />
           </p>
           <h1 class="HeaderBrandText">
             Chambre des Entreprises d'Elvéotie <br>
