Index du site étayé

--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -1,6 +1,8 @@
-<ul>
-  <li><a href="#">Entreprises</a></li>
-  <li><a href="#">Données</a></li>
-  <li><a href="#">Publications</a></li>
-  <li><a href="#">Qui sommes-nous ?</a></li>
-</ul>
+<nav class="HeaderNav">
+  <ul>
+    <a href="#"><li>Entreprises</li></a>
+    <a href="#"><li>Données</li></a>
+    <a href="#"><li>Publications</li></a>
+    <a href="#"><li>Qui sommes-nous ?</li></a>
+  </ul>
+</nav>
