Ajout des pages entreprises et données

--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -1,8 +1,6 @@
 <nav class="HeaderNav">
   <ul>
-    <a href="#"><li>Entreprises</li></a>
-    <a href="#"><li>Données</li></a>
-    <a href="#"><li>Publications</li></a>
-    <a href="#"><li>Qui sommes-nous ?</li></a>
+    <a href="{{ '/entreprises' | relative_url }}"><li>Entreprises</li></a>
+    <a href="{{ '/donnees' | relative_url }}"><li>Données publiques</li></a>
   </ul>
 </nav>
