Modif de la feuille de styles

--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -1,6 +1,6 @@
 <nav class="HeaderNav">
   <ul>
-    <a href="{{ '/entreprises' | relative_url }}"><li>Entreprises</li></a>
+    <a href="{{ '/entreprises' | relative_url }}"><li>Entreprises de la CEE</li></a>
     <a href="{{ '/donnees' | relative_url }}"><li>Données publiques</li></a>
   </ul>
 </nav>
