--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,15 @@
-/* Base */
+---
+---
+
+/* SNIPPETS */
+
+%reset-link {
+  color: inherit;
+  text-decoration: none;
+  outline: none;
+}
+
+/* BASE */
 
 :root {
   font-size: 13px;
@@ -10,9 +21,16 @@ body {
   margin: 0;
 }
 
-a {
-  color: #00b5b4;
+// Links
+
+a { color: #00b5b4; }
+
+a:hover, a:focus, a:active {
+  background-color: #00b5b4;
+  color: white;
 }
+
+// Headings
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Work Sans', sans-serif;
@@ -21,31 +39,19 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
 }
 
-h1 {
-  font-size: 1.5rem;
-}
+h1 { font-size: 1.5rem; }
 
-h2 {
-  font-size: 1.4rem;
-}
+h2 { font-size: 1.4rem; }
 
-h3 {
-  font-size: 1.3rem;
-}
+h3 { font-size: 1.3rem; }
 
-h4 {
-  font-size: 1.2rem;
-}
+h4 { font-size: 1.2rem; }
 
-h5 {
-  font-size: 1.1rem;
-}
+h5 { font-size: 1.1rem; }
 
-h6 {
-  font-size: 1rem;
-}
+h6 { font-size: 1rem; }
 
-/* Layout */
+/* LAYOUT */
 
 .MainContainer {
   background: white;
@@ -53,6 +59,8 @@ h6 {
   margin: 2rem auto;
   width: 800px;
 }
+
+// Header
 
 .HeaderBrand {
   align-items: center;
@@ -96,12 +104,6 @@ h6 {
   padding-left: 0;
 }
 
-.HeaderNav a {
-  color: inherit;
-  text-decoration: none;
-  outline: none;
-}
-
 .HeaderNav li {
   background: white;
   border-right: 1px solid silver;
@@ -112,6 +114,10 @@ h6 {
 .HeaderNav li:hover {
   background: #eaeaea;
 }
+
+.HeaderNav a { @extend %reset-link; }
+
+// Page
 
 .Page {
   align-items: stretch;
@@ -137,6 +143,8 @@ h6 {
   max-width: 150px;
 }
 
+// Footer
+
 .Footer {
   background: #eaeaea;
   border-top: 1px solid silver;
@@ -154,8 +162,4 @@ h6 {
 
 .FooterLinks {
   font-size: 80%;
-}
-
-.FooterLinks a {
-  color: inherit;
 }
