Ajout d'un lien vers l'accueil

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,10 +20,12 @@
             <img src="https://elveotie.github.io/images/gouvernement/cee.svg" alt="Logo de la CEE" />
           </p>
 
-          <h1 class="HeaderBrandText">
-            Chambre des Entreprises Elvéotiques <br>
-            <span>Dynamiser le Royaume</span>
-          </h1>
+          <a href="{{ '/' | relative_url }}">
+            <h1 class="HeaderBrandText">
+              Chambre des Entreprises Elvéotiques <br>
+              <span>Dynamiser le Royaume</span>
+            </h1>
+          </a>
         </div>
 
         {% include header-nav.html %}
