Correction stylistique du lien du header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
             <img src="https://elveotie.github.io/images/gouvernement/cee.svg" alt="Logo de la CEE" />
           </p>
 
-          <a href="{{ '/' | relative_url }}">
+          <a class="HeaderBrandLink" href="{{ '/' | relative_url }}">
             <h1 class="HeaderBrandText">
               Chambre des Entreprises Elvéotiques <br>
               <span>Dynamiser le Royaume</span>
