--- a/style.scss
+++ b/style.scss
@@ -16,9 +16,7 @@
 
 /* BASE */
 
-:root {
-  font-size: 13px;
-}
+:root { font-size: 13px; }
 
 body {
   background: white;
@@ -76,13 +74,15 @@ h6 { font-size: 1rem; }
 }
 
 .HeaderBrandLogo,
-.HeaderBrandText {
-  margin: 0;
-}
+.HeaderBrandText { margin: 0; }
 
 .HeaderBrandLogo img {
   height: 50px;
   margin-right: 1em;
+}
+
+.HeaderBrandLink { text-decoration: none;
+  .HeaderBrandText span { color: inherit; }
 }
 
 .HeaderBrandText {
@@ -129,17 +129,11 @@ h6 { font-size: 1rem; }
 }
 
 .PageMain,
-.PageAside {
-  padding: 1em;
-}
+.PageAside { padding: 1em; }
 
-.PageMain {
-  flex-grow: 1;
-}
+.PageMain { flex-grow: 1; }
 
-.PageTitle + p {
-  margin-top: 0;
-}
+.PageTitle + p { margin-top: 0; }
 
 .PageAside {
   border-left: 1px solid silver;
@@ -156,14 +150,8 @@ h6 { font-size: 1rem; }
   padding: 1em;
 }
 
-.Footer > *:first-child {
-  margin-top: 0;
-}
+.Footer > *:first-child { margin-top: 0; }
 
-.Footer > *:last-child {
-  margin-bottom: 0;
-}
+.Footer > *:last-child { margin-bottom: 0; }
 
-.FooterLinks {
-  font-size: 80%;
-}
+.FooterLinks { font-size: 80%; }
