--- a/assets/style.scss
+++ b/assets/style.scss
@@ -7,11 +7,6 @@
   color: inherit;
   text-decoration: none;
   outline: none;
-
-  &:hover, &:focus, &:active {
-    background: none;
-    color: inherit;
-  }
 }
 
 /* BASE */
@@ -81,9 +76,7 @@ h6 { font-size: 1rem; }
   margin-right: 1em;
 }
 
-.HeaderBrandLink { text-decoration: none;
-  .HeaderBrandText span { color: inherit; }
-}
+.HeaderBrandLink { @extend %reset-link; }
 
 .HeaderBrandText {
   font-size: 1.5rem;
