--- a/assets/style.scss
+++ b/assets/style.scss
@@ -25,8 +25,7 @@ body {
 
 // Links
 
-a {
-  &:link, &:visited { color: $blue; }
+a { color: $blue;
 
   &:hover, &:focus, &:active {
     background: $blue;
@@ -80,8 +79,8 @@ h6 { font-size: 1rem; }
   margin-right: 1em;
 }
 
-.HeaderBrandLink {
-  &:link, &:visited { @extend %reset-link; }
+.HeaderBrandLink { @extend %reset-link;
+
   &:hover, &:focus, &:active {
     .HeaderBrandText span { color: inherit; }
   }
@@ -112,15 +111,20 @@ h6 { font-size: 1rem; }
   padding-left: 0;
 }
 
+.HeaderNav a { @extend %reset-link; 
+
+  &:hover, &:focus, &:active {
+    background: none;
+
+    li { background: $blue; }
+  }
+}
+
 .HeaderNav li {
   background: white;
   border-right: 1px solid silver;
   font-family: 'Work Sans', sans-serif;
   padding: 1em;
-}
-
-.HeaderNav a { 
-  &:link, &:visited { @extend %reset-link; }
 }
 
 // Page
