--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <title>CEE - {{ page.title }}</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700" />
-    <link rel="stylesheet" href="{{ 'assets/style.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ 'style.css' | relative_url }}" />
   </head>
   
   <body>
