--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ $blue: #00b5b4;
 :root { font-size: 13px; }
 
 body {
-  background: white url(quilt.png);
+  background: #fafafa;
   font: 1rem/1.5 Roboto, arial, sans-serif;
   margin: 0;
 }
